--- a/profilsaya.html
+++ b/profilsaya.html
@@ -25,7 +25,7 @@
                 <li>2013- SDN Pancoran 08 Pagi</li>
             </ol>
         <h3>Kontak Saya</h3>
-        <p><a href="https://id-id.facebook.com/">Facebook</a></p>
-        <p><a href="https://www.instagram.com/">Instagram</a></p>
+        <p><a href="https://github.com/AdeniaMerdeka17/web-basic-seal">Github</a></p>
+        <p><a href="https://www.instagram.com/dekaadenn">Instagram</a></p>
     </body>
 </html>
