--- a/profilsaya.html
+++ b/profilsaya.html
@@ -24,8 +24,9 @@
                 <li>2013-2016 SMPN 182 Jakarta</li>
                 <li>2013- SDN Pancoran 08 Pagi</li>
             </ol>
-        <h3>Kontak Saya</h3>
+        <h3>Info & Kontak Saya</h3>
         <p><a href="https://github.com/AdeniaMerdeka17/web-basic-seal">Github</a></p>
         <p><a href="https://www.instagram.com/dekaadenn">Instagram</a></p>
+        <p><a href="portofolio.html">Portofolio</a></p>
     </body>
 </html>
