--- a/element.html
+++ b/element.html
@@ -1,1 +1,63 @@
-Cek cek
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portofolio</title>
+    
+</head>
+<body>
+    <body style="background-color:steelblue">
+        <table align="center" border="4" style="width: 900px;">
+        <tr><td align="center" colspan="3" bgcolor="yellow"><font color="black" size="20px">
+        <b>PORTOFOLIO</b>
+        </font></td></tr>
+        <tr>
+        <td bgcolor="#FF4500" rowspan="6" width="150px">
+        <img src="" width="150px" height="200px" border="4">
+        </td>
+        <td bgcolor="#FFFFFF">NAMA </td>
+        <td bgcolor="#FFFFFF"> Adenia Merdeka </td>
+        </tr>
+        <tr>
+            <td bgcolor="#FFFFFF"> TENTANG SAYA </td>
+            <td bgcolor="#FFFFFF"> Perkenalkan nama saya Adenia Merdeka, Biasa dipanggil Aden, Saya berumur 21 Tahun. Saya mudah beradaptasi dengan hal baru, bekerja sama dalam tim, mudah berkomunikasi dengan orang lain serta senang mempelajari hal baru</td>
+            </tr>
+        <tr>
+        <td bgcolor="#FFFFFF"> PENDIDIKAN </td>
+        <td bgcolor="#FFFFFF">
+            <li>2019-sekarang Universitas Persada Indonesia YAI</li>
+            <li>2016-2019 SMK CYBER MEDIA Jakarta</li>
+            <li>2013-2016 SMPN 182 Jakarta</li>
+            <li>2013- SDN Pancoran 08 Pagi</li>
+        </td>
+        </tr>
+        <tr>
+        <td bgcolor="#FFFFFF"> KEAHLIAN </td>
+        <td bgcolor="#FFFFFF">
+            <li>Microsoft Office (word, powerpoint)</li>
+            <li>bisa bekerja dengan tim</li>
+            <li>bisa berkomunikasi</li>
+            <li>bisa coding (Basic)</li> 
+        </td>
+        </tr>
+        <tr>
+        <td bgcolor="#FFFFFF"> HOBI </td>
+        <td bgcolor="#FFFFFF">
+            <li>Futsal</li>
+            <li>Nonton Bola</li>
+            <li>Berenang</li> 
+        </td>
+        </tr>
+        <tr>
+            <td bgcolor="#FFFFFF"> CONTACT </td>
+            <td bgcolor="#FFFFFF">
+                <li>Whatsapp : 081317649025</li>
+                <li>Instagram : @dekaadenn</li>
+                <li>Telegram : @dekaadenn</li> 
+            </td>
+            </tr>
+        </table>
+</body>
+</html>
