--- a/portofolio.html
+++ b/portofolio.html
@@ -15,7 +15,7 @@
         </font></td></tr>
         <tr>
         <td bgcolor="#FF4500" rowspan="6" width="150px">
-        <img src="" width="150px" height="200px" border="4">
+        <img src="fotodeka.JPG" width="150px" height="200px" border="4">
         </td>
         <td bgcolor="#FFFFFF">NAMA </td>
         <td bgcolor="#FFFFFF"> Adenia Merdeka </td>
