--- a/profilsaya.html
+++ b/profilsaya.html
@@ -1,5 +1,6 @@
 <html>
     <body>
+        <body style="background-color:burlywood"></body>
         <h1>Adenia Merdeka</h1>
         <img src="fotoaden.jpg" width="100">
         <h3>Tentang Saya</h3>
