--- a/portofolio.html
+++ b/portofolio.html
@@ -8,25 +8,25 @@
     
 </head>
 <body>
-    <body style="background-color:steelblue">
+    <body style="background-color:burlywood">
         <table align="center" border="4" style="width: 900px;">
-        <tr><td align="center" colspan="3" bgcolor="yellow"><font color="black" size="20px">
+        <tr><td align="center" colspan="3" bgcolor="red "><font color="black" size="20px">
         <b>PORTOFOLIO</b>
         </font></td></tr>
         <tr>
-        <td bgcolor="#FF4500" rowspan="6" width="150px">
+        <td bgcolor="#00FFFF" rowspan="6" width="150px">
         <img src="fotodeka.JPG" width="150px" height="200px" border="4">
         </td>
-        <td bgcolor="#FFFFFF">NAMA </td>
-        <td bgcolor="#FFFFFF"> Adenia Merdeka </td>
+        <td bgcolor="#green">NAMA </td>
+        <td bgcolor="#green"> Adenia Merdeka </td>
         </tr>
         <tr>
-            <td bgcolor="#FFFFFF"> TENTANG SAYA </td>
-            <td bgcolor="#FFFFFF"> Perkenalkan nama saya Adenia Merdeka, Biasa dipanggil Aden, Saya berumur 21 Tahun. Saya mudah beradaptasi dengan hal baru, bekerja sama dalam tim, mudah berkomunikasi dengan orang lain serta senang mempelajari hal baru</td>
+            <td bgcolor="#green"> TENTANG SAYA </td>
+            <td bgcolor="#green"> Perkenalkan nama saya Adenia Merdeka, Biasa dipanggil Aden, Saya berumur 21 Tahun. Saya mudah beradaptasi dengan hal baru, bekerja sama dalam tim, mudah berkomunikasi dengan orang lain serta senang mempelajari hal baru</td>
             </tr>
         <tr>
-        <td bgcolor="#FFFFFF"> PENDIDIKAN </td>
-        <td bgcolor="#FFFFFF">
+        <td bgcolor="#green"> PENDIDIKAN </td>
+        <td bgcolor="#green">
             <li>2019-sekarang Universitas Persada Indonesia YAI</li>
             <li>2016-2019 SMK CYBER MEDIA Jakarta</li>
             <li>2013-2016 SMPN 182 Jakarta</li>
@@ -34,8 +34,8 @@
         </td>
         </tr>
         <tr>
-        <td bgcolor="#FFFFFF"> KEAHLIAN </td>
-        <td bgcolor="#FFFFFF">
+        <td bgcolor="#green"> KEAHLIAN </td>
+        <td bgcolor="#green">
             <li>Microsoft Office (word, powerpoint)</li>
             <li>bisa bekerja dengan tim</li>
             <li>bisa berkomunikasi</li>
@@ -43,17 +43,16 @@
         </td>
         </tr>
         <tr>
-        <td bgcolor="#FFFFFF"> HOBI </td>
-        <td bgcolor="#FFFFFF">
+        <td bgcolor="#green"> HOBI </td>
+        <td bgcolor="#green">
             <li>Futsal</li>
             <li>Nonton Bola</li>
             <li>Berenang</li> 
         </td>
         </tr>
         <tr>
-            <td bgcolor="#FFFFFF"> CONTACT </td>
-            <td bgcolor="#FFFFFF">
-                <li>Whatsapp : 081317649025</li>
+            <td bgcolor="#green"> CONTACT </td>
+            <td bgcolor="#green">
                 <li>Instagram : @dekaadenn</li>
                 <li>Telegram : @dekaadenn</li> 
             </td>
