--- a/profilsaya.html
+++ b/profilsaya.html
@@ -3,7 +3,7 @@
         <body style="background-color:burlywood"></body>
         <h1>Adenia Merdeka</h1>
         <img src="fotoaden.jpg" width="100">
-        <h3>Tentang Saya</h3>
+        <p style="color:red;font-weight: bold;">Tentang Saya</p>
         <p>Hai teman-teman, Saya Izin memperkenalkan diri saya.<br>
             Nama saya Adenia Merdeka, kalian bisa memanggil saya Aden.<br>
             saya berumur 21 tahun, saya dari Universitas Persada Indonesia YAI.<br>
@@ -11,21 +11,21 @@
             saya tinggal di DKI Jakarta.<br>
             oke teman-teman, terima kasih atas perhatiannya.<br>
             sampai jumpa</p>
-        <h3>Keahlian Saya</h3>
+            <p style="color:yellow;font-weight: bold;">Keahlian Saya</p>
             <ul>
                 <li>Microsoft Office (word, powerpoint)</li>
                 <li>bisa bekerja dengan tim</li>
                 <li>bisa berkomunikasi</li>
                 <li>bisa coding (Basic)</li>
             </ul>
-        <h3>Pendidikan Saya</h3>
+            <p style="color:greenyellow;font-weight: bold;">Pendidikan Saya</p>
             <ol>
                 <li>2019-sekarang Universitas Persada Indonesia YAI</li>
                 <li>2016-2019 SMK CYBER MEDIA Jakarta</li>
                 <li>2013-2016 SMPN 182 Jakarta</li>
                 <li>2013- SDN Pancoran 08 Pagi</li>
             </ol>
-        <h3>Info & Kontak Saya</h3>
+            <p style="color:blue;font-weight: bold;">Info dan Kontak saya</p>
         <p><a href="https://github.com/AdeniaMerdeka17/web-basic-seal">Github</a></p>
         <p><a href="https://www.instagram.com/dekaadenn">Instagram</a></p>
         <p><a href="portofolio.html">Portofolio</a></p>
