--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="row">
         <div class="col-3">
             <div class="card">
-                <img src="./assets/image/about-1.jpg" class="card-img-top" alt="...">
+                <img src="./assets/image/php.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Web Basic</h5>
                     <p class="card-text">coding basic dan masih butuh proses belajar web.</p>
